tdf#156492 sw: fix alt-Enter in cells merged vertically

Inserting empty paragragh after the tables didn't work,
if the bottom right corner of the table contains cells
merged vertically.

Manual test: positionate the text cursor at the end
of the last paragraph of the bottom right cell of the
table (which contains also cells merged vertically), and
press alt-Enter to insert an empty paragraph after the
table.

Note: SpecialInsert, i.e. inserting empty paragraph by pressing
alt-Enter is the quick and sometimes the only possible way to insert
an empty paragraph before or after tables and sections.

Change-Id: Ic845c3d683a561784afe69588b3b1538e82c35c7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155556
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>